--- a/report.ipynb
+++ b/report.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "3f97453a",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baseline TF-IDF + LogReg F1 Score: 0.7634\n"
+      "Baseline TF-IDF + LogReg F1 Score: 0.7786\n"
      ]
     }
    ],
@@ -310,7 +310,11 @@
     "X_test_tfidf = tfidf.transform(disaster_data.X_test)\n",
     "\n",
     "# Logistic Regression Model\n",
-    "log_reg = LogisticRegression(max_iter=1000, n_jobs=-1)\n",
+    "log_reg = LogisticRegression(\n",
+    "    max_iter=1000,\n",
+    "    n_jobs=-1,\n",
+    "    class_weight='balanced'\n",
+    ")\n",
     "log_reg.fit(X_train_tfidf, disaster_data.y_train)\n",
     "\n",
     "val_pred = log_reg.predict(X_val_tfidf)\n",
